add routing for apps

--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "cli": {
     "defaultCollection": "@nrwl/angular"
   },
-  "defaultProject": "todos",
+  "defaultProject": "appshell",
   "schematics": {
     "@nrwl/angular": {
       "application": {
